# UpdateHistoricoAlerta

./: .gitignore  .makim.yaml  .var_file_names  LICENSE  Makefile  README.md  ansible.cfg  db-server-playbook.yaml  db-server-playbook.yml  enter_filename.sh  hosts  passwd_vault_example  prepare_alerta_hosts.yaml  prepare_hosts.yaml  pyproject.toml  requirements.txt  run-server-tasks.yaml  update-alerts-data.yaml  vault-config-example
ansible/: hosts
ansible/config/: hosts
ansible/roles/historico-alertas-update/scripts/: update_historico_alerta.sh  update_staging.sh
ansible/roles/historico-alertas-update/scripts/sql/: output.sql
ansible/roles/maps-upload/r_maps_scripts/: r_country_scripts.R  r_state_scripts.R
ansible/roles/maps-upload/r_maps_scripts/dados/: cidades_infodengue.RData
ansible/roles/maps-upload/r_maps_scripts/dados/shape/: rs_450_RepCor1.dbf  rs_450_RepCor1.qix  rs_450_RepCor1.shp  rs_450_RepCor1.shx
ansible/roles/sinan/: README.md
ansible/roles/sinan/scripts/: upload_sinan.sh
conda/: base.yaml
playbooks/: containers-system-update.yaml  historico-alert-prepare-hosts.yaml  historico-alert-update.yaml  incidence-map-upload.yaml  maps-server-playbook.yaml  update-alerts-data.yaml  upload-sinan-dbf.yaml
sql/: output.sql  update_hist.sql  update_hist_alerta.sql
